87,35 % cs ss 89 % cis sis

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,12 +11,14 @@ include(LibFindMacros)
 find_package(Corpus2 REQUIRED)
 include_directories(${Corpus2_INCLUDE_DIRS})
 set(LIBS ${LIBS} ${Corpus2_LIBRARIES})
+set(LIBS ${LIBS} ${Corpus2_LIBRARY})
 set(LIBS ${LIBS} "/usr/local/lib/libcorpus2.so")
 set(LIBS ${LIBS} "/usr/local/lib/libwccl.so")
 set(LIBS ${LIBS} "/usr/lib/x86_64-linux-gnu/libicui18n.so")
 
 find_package(Morfeusz2 REQUIRED)
 include_directories(${Morfeusz2_INCLUDE_DIRS})
+set(LIBS ${LIBS} ${Morfeusz2_LIBRARIES})
 #set(LIBS ${LIBS} "/usr/local/lib/libmaca_morfeusz.so")
 #set(LIBS ${LIBS} "/usr/local/lib/libmaca_morfeusz.so.1")
 #set(LIBS ${LIBS} "/usr/local/lib/libmaca_morfeusz.so.1.0")
