--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -19,8 +19,6 @@ find_package(Java REQUIRED)
 
 include(UseJava)
 
-
-
 find_package(Boost COMPONENTS program_options REQUIRED)
 include_directories(${Boost_INCLUDE_DIRS})
 set(LIBS ${LIBS} ${Boost_LIBRARIES})
@@ -69,15 +67,18 @@ set(LIBRARY_FILES ${CMAKE_CURRENT_SOURCE_DIR}/pugixml-1.8/src/pugixml.cpp polem/
         polem/CascadeLemmatizer.h polem/RuleLemmatizer.h
         polem/DictionaryLemmatizer.h polem/Inflection.h
         polem/NamLivPersonLemmatizer.h polem/NamLocLemmatizer.h
-        polem/OrthLemmatizer.h)
+        polem/OrthLemmatizer.h)# ${CMAKE_CURRENT_SOURCE_DIR}/pythonwrap/WrapLem_wrap.cxx)
 
 set(PUBLIC_HEADERS polem/CascadeLemmatizer.h polem/DictionaryLemmatizer.h
         polem/NamLivPersonLemmatizer.h polem/NamLocLemmatizer.h
         polem/RuleLemmatizer.h polem/OrthLemmatizer.h
         polem/Inflection.h)
 
-set(WRAPPER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/javawrap/JavaLem_wrap.cxx)
+set(WRAPPER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/javawrap/WrapLem_wrap.cxx)
 #set(WRAPPER_HEADERS "")
+
+#set(PY_FILES ${CMAKE_CURRENT_SOURCE_DIR}/pythonwrap/WrapLem_wrap.cxx)
+#set(PY_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/pythonwrap/WrapLem.py)
 
 file(GLOB DEPLOY_FILES_AND_DIRS "${PROJECT_SOURCE_DIR}/dict/*")
 foreach(ITEM ${DEPLOY_FILES_AND_DIRS})
@@ -119,8 +120,31 @@ install(TARGETS polemJava-dev
 #        DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
 
 set(CMAKE_JNI_TARGET TRUE)
-add_jar(polemJav ${CMAKE_CURRENT_SOURCE_DIR}/javawrap/CascadeLemmatizer.java ${CMAKE_CURRENT_SOURCE_DIR}/javawrap/Lem.java
-        ${CMAKE_CURRENT_SOURCE_DIR}/javawrap/LemJNI.java ${CMAKE_CURRENT_SOURCE_DIR}/javawrap/SWIGTYPE_p_UnicodeString.java)
+add_jar(polemJav ${CMAKE_CURRENT_SOURCE_DIR}/javawrap/CascadeLemmatizer.java ${CMAKE_CURRENT_SOURCE_DIR}/javawrap/WrapLem.java
+        ${CMAKE_CURRENT_SOURCE_DIR}/javawrap/WrapLemJNI.java ${CMAKE_CURRENT_SOURCE_DIR}/javawrap/SWIGTYPE_p_UnicodeString.java)
 
 
 
+
+#FIND_PACKAGE(SWIG REQUIRED)
+#INCLUDE(${SWIG_USE_FILE})
+#set(Python_ADDITIONAL_VERSIONS 2.7.12 3.5.2)
+#find_package(PythonInterp REQUIRED)
+#FIND_PACKAGE(PythonLibs REQUIRED)
+#INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
+
+#INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
+
+#SET(CMAKE_SWIG_FLAGS "")
+
+#SET_SOURCE_FILES_PROPERTIES(${CMAKE_CURRENT_SOURCE_DIR}/WrapLem.i PROPERTIES CPLUSPLUS ON)
+
+#SWIG_ADD_MODULE(WrapLem python ${CMAKE_CURRENT_SOURCE_DIR}/WrapLem.i)
+#SWIG_LINK_LIBRARIES(WrapLem polem-dev ${LIBS} ${PYTHON_LIBRARIES} )
+
+#execute_process ( COMMAND python3 -c "import site; print(site.getsitepackages()[0])" OUTPUT_VARIABLE PYTHON_SITE_PACKAGES OUTPUT_STRIP_TRAILING_WHITESPACE)
+
+#install(TARGETS _WrapLem
+#        LIBRARY DESTINATION ${PYTHON_SITE_PACKAGES})
+#install(FILES ${PY_HEADERS}
+#        DESTINATION ${PYTHON_SITE_PACKAGES})
