--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -160,26 +160,42 @@ INSTALL(TARGETS PolemJava
 
 ####PYTHON
 
-find_package(PythonInterp REQUIRED)
-FIND_PACKAGE(PythonLibs REQUIRED)
-INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
+find_package(Python3 COMPONENTS Interpreter Development)
+find_package(Python2 COMPONENTS Interpreter Development)
 
-INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
+if(Python3_FOUND)
+    INCLUDE_DIRECTORIES(${Python3_INCLUDE_DIRS})
+    INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
+    
+    SET(CMAKE_SWIG_FLAGS "")
+    SET_SOURCE_FILES_PROPERTIES(${CMAKE_CURRENT_SOURCE_DIR}/WrapLem.i PROPERTIES CPLUSPLUS ON)
+    
+    SWIG_ADD_LIBRARY(WrapLem LANGUAGE python SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/WrapLem.i)
+    SWIG_LINK_LIBRARIES(WrapLem polem-dev ${LIBS} ${Python3_LIBRARIES})
 
-SET(CMAKE_SWIG_FLAGS "")
+    execute_process ( COMMAND python3 -c "import site; print(site.getsitepackages()[0])" OUTPUT_VARIABLE PYTHON_SITE_PACKAGES OUTPUT_STRIP_TRAILING_WHITESPACE)
 
-SET_SOURCE_FILES_PROPERTIES(${CMAKE_CURRENT_SOURCE_DIR}/WrapLem.i PROPERTIES CPLUSPLUS ON)
-
-SWIG_ADD_MODULE(WrapLem python ${CMAKE_CURRENT_SOURCE_DIR}/WrapLem.i)
-SWIG_LINK_LIBRARIES(WrapLem polem-dev ${LIBS} ${PYTHON_LIBRARIES})
-
-#message("${PYTHON_LIBRARIES}")
-
-#execute_process ( COMMAND python3 -c "import site; print(site.getsitepackages()[0])" OUTPUT_VARIABLE PYTHON_SITE_PACKAGES OUTPUT_STRIP_TRAILING_WHITESPACE)
-execute_process(COMMAND python -c "from distutils.sysconfig import get_python_lib; print get_python_lib()" OUTPUT_VARIABLE PYTHON_SITE_PACKAGES OUTPUT_STRIP_TRAILING_WHITESPACE)
-
-install(TARGETS _WrapLem
+    install(TARGETS _WrapLem
         LIBRARY DESTINATION ${PYTHON_SITE_PACKAGES})
-install(FILES ${PY_HEADERS}
+    install(FILES ${PY_HEADERS}
         DESTINATION ${PYTHON_SITE_PACKAGES})
+elseif(Python2_FOUND)
+    INCLUDE_DIRECTORIES(${Python2_INCLUDE_DIRS})
+    INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
+    
+    SET(CMAKE_SWIG_FLAGS "")
+    SET_SOURCE_FILES_PROPERTIES(${CMAKE_CURRENT_SOURCE_DIR}/WrapLem.i PROPERTIES CPLUSPLUS ON)
+    
+    SWIG_ADD_LIBRARY(WrapLem LANGUAGE python SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/WrapLem.i)
+    SWIG_LINK_LIBRARIES(WrapLem polem-dev ${LIBS} ${Python2_LIBRARIES})
+
+    execute_process(COMMAND python2 -c "from distutils.sysconfig import get_python_lib; print get_python_lib()" OUTPUT_VARIABLE PYTHON2_SITE_PACKAGES OUTPUT_STRIP_TRAILING_WHITESPACE)
+
+    install(TARGETS _WrapLem
+        LIBRARY DESTINATION ${PYTHON2_SITE_PACKAGES})
+    install(FILES ${PY_HEADERS}
+        DESTINATION ${PYTHON2_SITE_PACKAGES})
+endif()
+
+
 
